style fix for like & comment buttons to be aligned at the bottom of each card

--- a/learn-redux/client/styles/style.styl
+++ b/learn-redux/client/styles/style.styl
@@ -5,6 +5,11 @@
 body
   background offwhite
 
+figcaption
+  flex-grow 1
+  display flex
+  flex-direction column
+
 .photo-grid
   display flex
   flex-wrap wrap
@@ -12,6 +17,8 @@ body
   margin 0 auto
 
 .grid-figure
+  display flex
+  flex-direction column
   flex-basis calc(33.333% - 4rem)
   flex-grow 1
   flex-shrink 0
@@ -69,8 +76,8 @@ body
   &:hover
     .remove-comment
       opacity 1
- 
-.comment-form 
+
+.comment-form
   input, textarea
     width 100%
     border 0
@@ -83,7 +90,7 @@ body
 
 .grid-photo-wrap
   position relative
-  
+
 .likes-heart
   background url(http://f.cl.ly/items/3Y373q2Q3J3Y1j203n0m/Bitmap-3.png) center no-repeat
   background-size contain
@@ -94,16 +101,17 @@ body
   left 50%
   top 50%
   pointer-events none
-  
 
-/*  
-  Buttons  
+
+/*
+  Buttons
 */
 
 .control-buttons
+  margin-top auto
   display flex
   justify-content space-between
-    
+
 button, .button
   border 2px solid lighten(grey, 90%)
   background none
@@ -125,9 +133,10 @@ button, .button
   Cowboy style speech bubble - you should probably use an SVG for this if you are doing more icons.
 */
 .speech-bubble
+  margin-right .5em
   size = 1.25rem
   width size * 1.2
-  height size 
+  height size
   background blue
   display inline-block
   border-radius 50%
@@ -144,6 +153,6 @@ button, .button
     top 30%
     left 0
 
-  
-  
+
+
 
